@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-24T08:11:48Z",
+  "timestamp" : "2022-06-28T08:13:49Z",
   "count_outdated" : 410,
   "uniques_outdated" : 26,
-  "count" : 424,
-  "uniques" : 30,
+  "count" : 427,
+  "uniques" : 31,
   "views" : [
     {
       "timestamp": "2022-06-16T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-28T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "uniques": 1,
