@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
+      "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-28T00:00:00Z",
       "count": 3,
       "uniques": 1
     }
