@@ -1,3 +1,10 @@
+2022-06-28T08:13:49Z:
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 26 410 / 30 424
+* notice: next accum: outdated-unq outdated-all / unq all: 26 410 / 31 427
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-06-28]
+
 2022-06-24T08:11:48Z:
 * notice: last 14d: unq all: 1 14
 * notice: prev accum: outdated-unq outdated-all / unq all: 25 408 / 30 424
